# PdfInfoEx

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  detector.py  extractors.py  image_converter.py  llm_providers.py  token_estimator.py
